# mcp-ms-todo-server

./: .auth.baseurl  .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  README_CLIENT.md  README_DEPLOY.md  README_QA.md  alembic.ini  docker-compose-tool.yml  docker-compose.authentik.traefik.yml  docker-compose.authentik.yml  docker-compose.direct.yml  docker-compose.traefik.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml  smoke_test.py  tools_manifest.py
.github/: copilot-instructions.md
.github/instructions/: MSTODOMCPSERVER.instructions.md
.github/workflows/: ci.yml  docusaurus.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  (+8 more)
app/: adapter_graph_rest.py  admin_cli.py  apikeys.py  apps.py  auth_msal.py  bootstrap.py  casbin_adapter.py  cli.py  config.py  container.py  context.py  db.py  main.py  models.py  policies.py  policy.py  rbac.py  service_todo.py  smoke_test.py  tokens.py  tools.py  tools_todo.py
auth-helper/: Dockerfile  __init__.py  appreg.py  auth-helper.py  cli.py  config.py  dbsync.py  graph.py  pyproject.toml  requirements.txt  tokens.py
auth_helper/: __init__.py  __main__.py  appreg.py  cli.py  config.py  dbsync.py  graph.py  loader.py  tokens.py
client/: mcp-client.mjs
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
policy/: model.conf  policy.csv
templates/: admin.json  lite.json  poweruser.json
tests/: README.md  curl_smoke.sh  default_policy_smoke.sh  env.sample  groups_smoke.sh  policy_smoke.sh
(+80 files in other folders)
