[project]
name = "mcp-ms-todo-server"
version = "0.1.0"
description = "MCP 서버 및 API"
authors = [{ name = "yamon", email = "yamon@yamon.io" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110,<0.111",
    "uvicorn[standard]>=0.29,<0.30",
    "httpx>=0.27,<0.28",
    "python-dotenv>=1.0,<2.0",
    "jsonschema>=4.22,<5.0",
    "SQLAlchemy>=2.0,<3.0",
    "casbin>=1.44,<2.0",
]

[project.scripts]
mcp-cli = "app.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
